# prediction_calibration

./: .gitignore  AGENTS.md  CURRENT_CAPABILITIES.md  README.md  ROADMAP.md  TASK_LOG.md  pyproject.toml
agents/: AGENTS.md  CURRENT_CAPABILITIES.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  TASK_LOG.md
configs/: README.md  backtest.yaml  decomposition.yaml  features.yaml  figures.yaml  final_audit.yaml  final_run.yaml  inference.yaml  metrics.yaml  models.yaml  presentation.yaml  quotes.yaml  raw_baseline_audit.yaml  replication_small.yaml  reporting.yaml  robustness.yaml  sampling.yaml  taxonomy.yaml  validation.yaml
data/: README.md
data/artifacts/: README.md
data/interim/: README.md
data/processed/: README.md
docs/: CURRENT_CAPABILITIES.md  README.md  final_readiness_audit.md
docs/audits/: final_data_semantics.md
docs/calibration/: phase14_methods.md
docs/data_sources/: becker_kalshi_schema.md
docs/edge/: executability_methodology.md
notebooks/: README.md
paper/: README.md
scripts/: README.md  audit_final_artifacts.py  audit_kalshi_raw.py  audit_raw_baseline.py  build_feature_panel.py  build_final_run_registry.py  build_interim_kalshi.py  build_quote_observations.py  build_snapshot_panel.py  build_taxonomy_panel.py  build_walkforward_splits.py  evaluate_decomposition.py  evaluate_raw.py  fit_walkforward.py  inspect_raw_schema.py  make_figures.py  make_presentation_figures.py  make_tables.py  plot_raw_baseline.py  run_edge_sim.py  run_inference.py  run_robustness.py  run_small_sample_pipeline.py
tests/: test_calibrators.py  test_decomposition.py  test_edge_sim.py  test_features.py  test_final_audit.py  test_final_readiness.py  test_import.py  test_inference.py  test_inspection.py  test_kalshi_audit.py  test_kalshi_cleaning.py  test_manuscript_outputs.py  test_metrics.py  test_parquet_inspection.py  test_presentation_plots.py  test_quote_observations.py  test_raw_baseline_audit.py  test_raw_baseline_plots.py  test_replication_pipeline.py  test_robustness.py  test_schema.py  test_snapshots.py  test_taxonomy.py  test_timestamps.py  test_walkforward_evaluation.py  test_walkforward_splits.py
(+137 files in other folders)
