[project]
name = "predmkt"
version = "0.1.0"
description = "Prediction-market calibration, recalibration, and edge-detection research package."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Prediction Calibration Contributors" }
]
dependencies = [
  "duckdb>=1.1",
  "pyarrow>=16.0",
  "pyyaml>=6.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.13"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predmkt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
