[project]
name = "predmkt"
version = "0.1.0"
description = "Prediction-market calibration, recalibration, and edge-detection research package."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Prediction Calibration Contributors" }
]
dependencies = [
  "duckdb>=1.1",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "pyyaml>=6.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.13"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predmkt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
# Phase 17 CI type-check gate. Full `uv run mypy src` remains a typing-cleanup
# target for older PyArrow/Pandas-heavy modules, not the current release gate.
files = [
  "src/predmkt/edge",
  "src/predmkt/io/kalshi_quotes.py",
  "src/predmkt/plots/manuscript.py",
  "src/predmkt/reports/manuscript.py",
  "src/predmkt/reports/final_audit.py",
  "src/predmkt/reports/final_readiness.py"
]
